--- a/tpe_paw_front/src/styles/main.scss
+++ b/tpe_paw_front/src/styles/main.scss
@@ -5,6 +5,10 @@
     color: red !important;
 }
 
+.grid-error-layout {
+    padding: 100px 0px 100px 0px;
+}
+
 .grid-progress-circle {
     padding: 200px 0px 200px 0px;
 }
