--- a/tpe_paw_front/src/styles/main.scss
+++ b/tpe_paw_front/src/styles/main.scss
@@ -13,3 +13,9 @@
 .grid-progress-circle {
     padding: 200px 0px 200px 0px;
 }
+
+.view-title {
+    font-size: 55px;
+    font-weight: 300;
+    margin: 10px 0 10px 0;
+}
