[Registration] Improved UI on all subviews

--- a/tpe_paw_front/src/styles/main.scss
+++ b/tpe_paw_front/src/styles/main.scss
@@ -19,3 +19,15 @@
     font-weight: 300;
     margin: 10px 0 10px 0;
 }
+
+.max-800 {
+    max-width: 800px !important;
+}
+
+.max-600 {
+    max-width: 600px !important;
+}
+
+.max-400 {
+    max-width: 400px !important;
+}
