--- a/tpe_paw_front/src/styles/registration.scss
+++ b/tpe_paw_front/src/styles/registration.scss
@@ -10,3 +10,14 @@
 .registration-container {
   padding: 2% 5% 2% 5%;
 }
+.registration-snippit-logo {
+  -webkit-user-select: none; 
+  -moz-user-select: none; 
+  -ms-user-select: none;
+  user-select: none;
+  font-size: 50px;
+  font-weight: 500;
+}
+.registration-title-layout {
+  font-size: 35px;
+}
