[Navbar, General] Minor color changes, changed navbar roundness

--- a/tpe_paw_front/src/styles/colours.scss
+++ b/tpe_paw_front/src/styles/colours.scss
@@ -1,7 +1,13 @@
+$prussian-blue: #0B3954;
+
 .color-crimson {
   color: crimson !important;
 }
 
 .color-sandybrown {
   color: sandybrown;
+}
+
+.color-prussian-blue {
+  color: #0B3954;
 }
