[SnippetDetail] Quick implementation of quick copy

--- a/tpe_paw_front/src/styles/main.scss
+++ b/tpe_paw_front/src/styles/main.scss
@@ -14,10 +14,13 @@
     padding: 200px 0px 200px 0px;
 }
 
+.view-title-layout {
+}
+
 .view-title {
-    font-size: 55px;
+    font-size: 75px;
     font-weight: 300;
-    margin: 10px 0 10px 0;
+    margin: 2% 0 4% 0;
 }
 
 .max-800 {
