[Presentation] Added footer to make page look better

--- a/tpe_paw/frontend/src/styles/main.scss
+++ b/tpe_paw/frontend/src/styles/main.scss
@@ -43,3 +43,8 @@ $secondary: #64b5f6;
     min-width: 100% !important;
     width: 100% !important;
 }
+
+#footer {
+    display: flex;
+    margin-top: auto !important;
+}
