--- a/tpe_paw/frontend/src/styles/main.scss
+++ b/tpe_paw/frontend/src/styles/main.scss
@@ -51,3 +51,10 @@ $secondary: #64b5f6;
         padding: 5px;
     }
 }
+
+.no-select {
+    -webkit-user-select: none; 
+    -moz-user-select: none; 
+    -ms-user-select: none;
+    user-select: none;
+}
