--- a/tpe_paw/frontend/src/styles/main.scss
+++ b/tpe_paw/frontend/src/styles/main.scss
@@ -60,6 +60,6 @@ $secondary: #64b5f6;
 }
 
 .snippit-subtitle {
-    color: #2196f3 !important;
-    font-weight: 400;
+    color: $primary !important;
+    font-weight: 300;
 }
