--- a/tpe_paw/services/src/main/resources/templates/emailVerification.vm
+++ b/tpe_paw/services/src/main/resources/templates/emailVerification.vm
@@ -26,8 +26,7 @@
 
         .mid-container {
             background-color: #eeedf2;
-            border-bottom-left-radius: 30px;
-            border-bottom-right-radius: 30px;
+
             padding-bottom: 20px;
             width: 100%;
         }
@@ -68,9 +67,8 @@
         .title-container {
             font-size: 30px !important;
             padding: 10px 0 10px 0;
-            border-bottom-left-radius: 15px;
-            border-bottom-right-radius: 15px;
-            background: #5E35B1;
+
+            background: #1565c0;
         }
 
         .bottom-container {
@@ -107,8 +105,8 @@
 </head>
 <body style="background-color: transparent;width: 100%;">
 <div class="full-width" style="font-family: Roboto, 'sans-serif';box-sizing: border-box;">
-    <div class="fw-100 mid-container" style="font-family: Roboto, 'sans-serif';box-sizing: border-box;background-color: #eeedf2;border-bottom-left-radius: 30px;border-bottom-right-radius: 30px;padding-bottom: 20px;width: 100%;font-weight: 100;">
-        <div class="center white-text fw-300 title-container" style="font-family: Roboto, 'sans-serif';box-sizing: border-box;font-weight: 300;padding: 10px 0 10px 0;border-bottom-left-radius: 15px;border-bottom-right-radius: 15px;background: #5E35B1;align-items: center;justify-content: center;text-align: center;color: white !important;font-size: 30px !important;">
+    <div class="fw-100 mid-container" style="font-family: Roboto, 'sans-serif';box-sizing: border-box;background-color: #eeedf2;padding-bottom: 20px;width: 100%;font-weight: 100;">
+        <div class="center white-text fw-300 title-container" style="font-family: Roboto, 'sans-serif';box-sizing: border-box;font-weight: 300;padding: 10px 0 10px 0;background: #1565c0;align-items: center;justify-content: center;text-align: center;color: white !important;font-size: 30px !important;">
             <span class="fw-500" style="font-family: Roboto, 'sans-serif';box-sizing: border-box;font-weight: 500;">#msg("email.app.title")</span>
         </div>
         <div class="mid-container-info" style="font-family: Roboto, 'sans-serif';box-sizing: border-box;padding: 20px;">
