[UserProfile] Added reputation and date joined

--- a/tpe_paw/frontend/src/styles/noticeCard.scss
+++ b/tpe_paw/frontend/src/styles/noticeCard.scss
@@ -1,6 +1,6 @@
 @import './main.scss';
 .notice-card {
-  background-color: $background !important;
+  // background-color: $background !important;
   border-radius: 10px !important;
 }
 
