--- a/tpe_paw/frontend/src/styles/adminAdd.scss
+++ b/tpe_paw/frontend/src/styles/adminAdd.scss
@@ -1,22 +1,30 @@
 @import '~vuetify/src/styles/settings/_variables';
+@import "@/styles/main.scss";;
 
 @media #{map-get($display-breakpoints, 'sm-and-down')} {
   .admin-add-card {
     height: 500px;
+    border-radius: 50px;
   }
 }
 
 @media #{map-get($display-breakpoints, 'md-and-down')} {
   .admin-add-card {
     height: 550px;
+    border-radius: 50px;
   }
 }
 
 @media #{map-get($display-breakpoints, 'lg-and-up')} {
   .admin-add-card {
     height: 600px;
+    border-radius: 50px;  
   }
 }
+.admin-add-card{
+  border-radius: 15px !important;
+}
+
 .admin-add-inner-container {
   height: 100%;
   display: flex;
@@ -29,10 +37,11 @@
   height: 10%;
   min-height: 10%;
   font-size: 32px;
+  color: $primary;
   // font-weight: 300;
 }
 .admin-add-text-field {
-  margin: 5% 0px 0px 0px;
+  margin: 3% 0px 0px 0px;
   height: 10%;
   min-height: 10%;
   > .flex {
