--- a/tpe_paw/frontend/src/styles/noticeCard.scss
+++ b/tpe_paw/frontend/src/styles/noticeCard.scss
@@ -2,6 +2,7 @@
 .notice-card {
   // background-color: $background !important;
   border-radius: 10px !important;
+  width: 600px;
 }
 
 .notice-card-text {
@@ -9,4 +10,12 @@
     margin: 0px;
   }
   font-size: 15px;
+}
+
+.notice-card-icon {
+  display: flex;
+  align-content: center;
+  i {
+    font-size: 100px !important;
+  }
 }
