--- a/tpe_paw/frontend/src/styles/adminAdd.scss
+++ b/tpe_paw/frontend/src/styles/adminAdd.scss
@@ -84,8 +84,8 @@
 }
 
 .title-delete-btn {
-  height: 60px;
-  width: 60px;
+  height: 60px !important;
+  width: 60px !important;
   i {
     font-size: 60px !important;
   }
